add new tests to report

--- a/lighthouse-cli/test/fixtures/accessibility/accessibility_tester.html
+++ b/lighthouse-cli/test/fixtures/accessibility/accessibility_tester.html
@@ -22,6 +22,11 @@
     <title>A11y Test Page</title>
   </head>
   <body>
+    <h2>accesskeys</h2>
+    <section>
+      <div accesskey="h" tabindex="0">accesskey h</div>
+      <div accesskey="h" tabindex="0">accesskey h</div>
+    </section>
     <h2>aria-allowed-attr</h2>
     <section>
       <div
